MODIFY: 863. All Nodes Distance K in Binary Tree

--- a/LeetCode/src/863. All Nodes Distance K in Binary Tree.md
+++ b/LeetCode/src/863. All Nodes Distance K in Binary Tree.md
@@ -74,21 +74,12 @@ public:
             {
                 TreeNode* n = q.front();
                 q.pop();
-                if(n->left && visited.find(n->left) == visited.end())
-                {
+                if(n->left && visited.insert(n->left).second)
                     q.push(n->left);
-                    visited.insert(n->left);
-                }
-                if(n->right && visited.find(n->right) == visited.end())
-                {
+                if(n->right && visited.insert(n->right).second)
                     q.push(n->right);
-                    visited.insert(n->right);
-                }
-                if(parent[n] && visited.find(parent[n]) == visited.end())
-                {
+                if(parent[n] && visited.insert(parent[n]).second)
                     q.push(parent[n]);
-                    visited.insert(parent[n]);
-                }
             }
         }
         
