MODIFY: 212. Word Search II

--- a/LeetCode/src/212. Word Search II.md
+++ b/LeetCode/src/212. Word Search II.md
@@ -62,6 +62,8 @@ public:
                 clear(child);
             delete child;
         }
+        root->children.clear();
+        root->children.shrink_to_fit();
     }
 };
 
