--- a/LeetCode/src/872. Leaf-Similar Trees.md
+++ b/LeetCode/src/872. Leaf-Similar Trees.md
@@ -11,5 +11,43 @@ Output: true
 
 # Solution
 ```cpp
+/**
+ * Definition for a binary tree node.
+ * struct TreeNode {
+ *     int val;
+ *     TreeNode *left;
+ *     TreeNode *right;
+ *     TreeNode() : val(0), left(nullptr), right(nullptr) {}
+ *     TreeNode(int x) : val(x), left(nullptr), right(nullptr) {}
+ *     TreeNode(int x, TreeNode *left, TreeNode *right) : val(x), left(left), right(right) {}
+ * };
+ */
+class Solution {
+public:
+    bool leafSimilar(TreeNode* root1, TreeNode* root2) {
+        
+        // For comapre result
+        vector<int> v1;
+        vector<int> v2;
 
+        // Preorder
+        dfs(root1, v1);
+        dfs(root2, v2);
+
+        return v1 == v2;
+    }
+
+    void dfs(TreeNode* root, vector<int>& v)
+    {
+        if(!root)
+            return;
+        if(!root->left && !root->right)
+        {
+            v.push_back(root->val);
+            return;
+        }
+        dfs(root->left, v);
+        dfs(root->right, v);
+    }
+};
 ```
